# smatctock-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  main.py  pyproject.toml
.claude/skills/clean-code/: SKILL.md
.claude/skills/clean-code/checklists/: code-review.md  refactoring.md
.claude/skills/clean-code/scripts/: code-quality-check.sh  function-length-check.sh
.claude/skills/clean-code/stages/: ch01-clean-code.md  ch02-meaningful-names.md  ch03-functions.md  ch04-comments.md  ch05-formatting.md  ch06-objects-and-data-structures.md  ch07-error-handling.md  ch08-boundaries.md  ch09-unit-tests.md  ch10-classes.md  ch11-systems.md  ch12-emergence.md  ch13-concurrency.md  ch14-successive-refinement.md  ch17-smells-heuristics.md
.github/workflows/: ci.yml
docs/: README.md  index.md
docs/concepts/: debug-frontend-behavior.md  debug-llm-operations.md  debug-setup-and-database.md  demo-akisi.md  tdd-refactor-checklist.md
docs/decisions/: 0000-template.md  0001-hackathon-kapsami-temalar.md  0002-mimari-yaklasim-layered-agent.md  0003-cerceve-teknoloji-yigini.md  0004-agent-cercevesi-langchain-langgraph-kullanilmamasi.md  0005-llm-saglayici-secimi-minimax-gemini.md  0006-persistans-sqlite-sqlalchemy-imperative-mapping.md  0007-scheduler-apscheduler-async.md  0008-notifier-telegram-frontend-sse.md  0009-agent-loop-tool-calling.md  0010-frontend-htmx-alpine-tailwind.md  0011-tdd-refactor-disiplini.md  0012-adr-yasam-dongusu-disiplini.md
src/agent/: conversation.py  loop.py
src/agent/prompts/: loader.py  system_chat.md  system_morning_briefing.md
src/agent/tools/: definitions.py  dispatcher.py  handlers.py  registry.py  tool_result.py
src/agent/workflows/: morning_briefing.py
src/application/ports/: chat_reply_cache.py  chat_reply_publisher.py  llm_client.py  llm_errors.py  notification_repository.py  notifier.py  order_repository.py  product_repository.py  scheduler.py  shipment_repository.py  stock_threshold_repository.py
src/application/services/: notification_service.py  order_service.py  shipping_service.py  stock_service.py  workflow_service.py
src/domain/notifications/: notification.py
src/domain/orders/: order.py  order_status.py
src/domain/products/: product.py
src/domain/shipping/: shipment.py
src/domain/stock/: stock_threshold.py
src/infrastructure/: composition.py
src/infrastructure/db/: engine.py  enum_type.py  mappings.py  seed.py  seed_cli.py  session.py  tables.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/repositories/: notification_repository.py  order_repository.py  product_repository.py  shipment_repository.py  stock_threshold_repository.py
src/infrastructure/llm/: call_logger.py  gemini_client.py  gemini_factory.py  minimax_client.py  minimax_factory.py
src/infrastructure/notifiers/: fanout_notifier.py  frontend_notifier.py  in_memory_chat_reply_cache.py  sse_chat_reply_publisher.py  sse_hub.py  telegram_notifier.py
src/infrastructure/scheduler/: apscheduler_adapter.py
src/infrastructure/scheduler/jobs/: check_shipping_delays.py  check_stock_thresholds.py  daily_workflow_dispatch.py  morning_briefing_job.py
src/presentation/: main.py
src/presentation/api/: dependencies.py  response_sanitizer.py  schemas.py
src/presentation/api/routes/: ai_chat.py  inventory.py  notifications.py  orders.py  pages.py  products.py  shipments.py  workflow.py
src/presentation/config/: settings.py
src/presentation/templates/: base.html  chat.html  dashboard.html  orders_explorer.html
static/: index.html
tests/e2e/api/: test_health.py  test_routes_smoke.py
tests/integration/api/: test_ai_chat_sse.py  test_inventory_route.py  test_orders_route.py  test_shipments_route.py  test_workflow_route.py
tests/integration/db/: conftest.py  test_notification_repository.py  test_order_repository.py  test_product_repository.py  test_schema_smoke.py  test_seed.py  test_shipment_repository.py
tests/unit/: test_settings.py
tests/unit/agent/: test_conversation.py  test_loop.py  test_prompt_loader.py
tests/unit/presentation/: test_response_sanitizer.py
(+30 files in other folders)
