[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yzta-hackathon"
version = "0.1.0"
description = "Kooperatif Operasyon Ajanı — YZTA Hackathon (Tema 1-5)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # Presentation
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "jinja2>=3.1",

    # Infrastructure
    "httpx>=0.27,<0.30",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "apscheduler>=4.0.0a5",

    # LLM sağlayıcıları (ADR-0005)
    "openai>=1.40,<2",
    "google-genai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "freezegun>=1.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "N",        # naming
    "SIM",      # simplify
    "RUF",      # ruff-specific
    "ASYNC",    # async pitfalls
]
ignore = [
    "E501",   # line-length — formatter halleder
    "RUF001", # ambiguous unicode (Türkçe karakterler — proje dili Türkçe)
    "RUF002", # aynı (docstring)
    "RUF003", # aynı (comment)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["src"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "aiosqlite.*", "google.*", "google.genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: integration tests (DB, HTTP)",
    "e2e: end-to-end tests via FastAPI TestClient",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture (ADR-0002)"
type = "layers"
layers = [
    "src.presentation",
    "src.agent",
    "src.application",
    "src.domain",
]

[[tool.importlinter.contracts]]
name = "Infrastructure import only from presentation (ADR-0002)"
type = "forbidden"
source_modules = ["src.domain", "src.application", "src.agent"]
forbidden_modules = ["src.infrastructure"]

[[tool.importlinter.contracts]]
name = "Pydantic forbidden in domain/application/agent (ADR-0003)"
type = "forbidden"
source_modules = ["src.domain", "src.application", "src.agent"]
forbidden_modules = ["pydantic", "pydantic_settings"]

[[tool.importlinter.contracts]]
name = "FastAPI only in presentation (ADR-0003)"
type = "forbidden"
source_modules = ["src.domain", "src.application", "src.agent", "src.infrastructure"]
forbidden_modules = ["fastapi"]

[[tool.importlinter.contracts]]
name = "httpx only in infrastructure (ADR-0003)"
type = "forbidden"
source_modules = ["src.domain", "src.application", "src.agent", "src.presentation"]
forbidden_modules = ["httpx"]

[[tool.importlinter.contracts]]
name = "SQLAlchemy only in infrastructure/db (ADR-0006)"
type = "forbidden"
source_modules = ["src.domain", "src.application", "src.agent", "src.presentation"]
forbidden_modules = ["sqlalchemy", "aiosqlite"]

[[tool.importlinter.contracts]]
name = "LLM SDK'ları yalnızca infrastructure/llm'de (ADR-0005)"
type = "forbidden"
source_modules = ["src.domain", "src.application", "src.agent", "src.presentation"]
forbidden_modules = ["openai", "google"]
